# TestOVM

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
Data/: cubegrad_thick.txt  cubegrad_thick_boundary.txt  ico01.txt  icosphere01.txt  test_two.txt  tet_interior.txt
src/: CSPSolver.cpp  CSPSolver.hpp  FlipSolver.cpp  FlipSolver.hpp  LineReader.cpp  LineReader.hpp  Main.cpp  NaxosSolver.cpp  NaxosSolver.hpp
